...
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="112dp"
        android:background="#D65B5B"
        android:clickable="true"
...
