...
            android:textAlignment="center"
            android:textColor="#B0BEC5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="94dp"
            android:layout_height="140dp"
            android:background="#513777"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/roll"
...
